# aar_dl

./: --color  .Rprofile  .cursorignore  .gitignore  MiNE.ipynb  README.md  Sheep_decoder_TensorFlow.ipynb  _targets.R  _targets.Rmd  aar_dl_CNN_TF.ipynb  data-pipeline.drawio  functions.ipynb  image_building-clean.ipynb  image_building.ipynb  packages.R  pyproject.toml  pyvenv.cfg  rec_net mine.ipynb  recu.ipynb  requirements.txt  search_minmax.sh  sheep_data_wrangling.rmd  test  test.py  testPrediction.py
R/: chop_data.R  plot_wrangled_full_data.R  read_and_clean_data.R  read_files.R  split_train_validate_test.R  test_directories.R  wrangle_and_merge.R
aar_helpers/: __init__.py  check_missing_files.py  data_preprocessing.py  get_missing_files.py  model_training.py  setup.py  utils.py  visualizations.py
analysis/: .data_description_wrangling.Rmd.swo  .data_description_wrangling.Rmd.swp  _site.yml  about.Rmd  convert_pilca_data_to_csv.ipynb  create_clean_sheep_data_pilcaniyeu.Rmd  create_clean_sheep_data_riomanso.ipynb  create_data_for_labelstudio.Rmd  create_data_for_labelstudio.qmd  create_data_for_labelstudio_R.rmd  create_train_test_split.ipynb  create_train_test_split_MANSO.ipynb  data_2022.Rmd  data_description.Rmd  data_description_wrangling.Rmd  data_description_wrangling2.Rmd  data_description_wrangling_bp.Rmd  data_exploration.ipynb  data_wrangling.Rmd  history_conv_transformer_goodfit.json  image_building.Rmd  image_building2.Rmd  preprocess_data.ipynb  references.bib  sheep_decoder_TF.ipynb  sheep_decoder_TF_CLEAN.ipynb  stuff.Rmd  test.Rmd  test.py  (+1 more)
(+226 files in other folders)
