[tool.poetry]
name = "aar-dl"
version = "0.1.0"
description = ""
authors = ["Francis Felici <francis.felici@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pandas = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
